--- a/德州扑克 - 胜率计算器_files/style.css
+++ b/德州扑克 - 胜率计算器_files/style.css
@@ -124,7 +124,7 @@ button[disabled] {
   right: 0px;
 }
 
-#mybutton button {
+#mybutton button, .delete-btn {
   width: 100px;
   height: 100px;
   background: #333;
@@ -133,6 +133,10 @@ button[disabled] {
   border: 7px dashed #ccc;
   border-radius: 100px;
   font-size: 1.5em;
+}
+
+.delete-btn {
+	float: right;
 }
 
 .cards span {
@@ -166,4 +170,17 @@ table#myTable tbody td {
   padding: 4px;
   background-color: #FFF;
   vertical-align: top;
+}
+
+.progress-bar {
+  width: 300px; /* 調整進度條寬度 */
+  height: 20px; /* 調整進度條高度 */
+  background-color: #932424; /* 進度條背景顏色 */
+  border-radius: 10px; /* 調整進度條圓角 */
+}
+
+.progress {
+  height: 100%;
+  background-color: #4caf50; /* 進度條顏色 */
+  border-radius: 10px; /* 調整進度條圓角 */
 }
