--- a/德州扑克 - 胜率计算器_files/style.css
+++ b/德州扑克 - 胜率计算器_files/style.css
@@ -184,3 +184,35 @@ table#myTable tbody td {
   background-color: #4caf50; /* 進度條顏色 */
   border-radius: 10px; /* 調整進度條圓角 */
 }
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+th, td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+input[type="number"] {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+label {
+  display: inline-block;
+  padding: 8px;
+}
+
+table#outs th,
+table#outs td {
+  width: 33.33%;
+}
