update input to slider

--- a/德州扑克 - 胜率计算器_files/style.css
+++ b/德州扑克 - 胜率计算器_files/style.css
@@ -216,3 +216,20 @@ table#outs th,
 table#outs td {
   width: 33.33%;
 }
+
+.adjust-buttons {
+  display: flex;
+  align-items: center;
+}
+
+.adjust-buttons button {
+  padding: 5px;
+  background-color: #eee;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.adjust-buttons button:hover {
+  background-color: #ddd;
+}
